apps/auth/services/gateway/k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forward-auth
spec:
  forwardAuth:
    address: http://gateway.auth:80/verify
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-User-Id
      - X-Auth-Email
      - X-Auth-Roles
