apps/auth/services/gateway/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
spec:
  ingressClassName: traefik
  rules:
    - host: auth.homelab.local
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  name: http
          - path: /verify
            pathType: Exact
            backend:
              service:
                name: gateway
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  name: http
